Fix close icon alignment

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -43,7 +43,7 @@ header {
 }
 
 #burger.active span:nth-child(1) {
-  transform: translateY(15px) rotate(45deg);
+  transform: translateY(18px) rotate(45deg);
 }
 
 #burger.active span:nth-child(2) {
@@ -51,7 +51,7 @@ header {
 }
 
 #burger.active span:nth-child(3) {
-  transform: translateY(-6px) rotate(-45deg);
+  transform: translateY(-5px) rotate(-45deg);
 }
 
 #search-container {
